--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animejs": "^3.2.1",
+    "framer-motion": "^9.1.7",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-particles-js": "^3.6.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-simple-maps": "^3.0.0",
     "recharts": "^2.4.3",
     "web-vitals": "^2.1.4"
   },
